--- a/Assignments/Assignment3/index.html
+++ b/Assignments/Assignment3/index.html
@@ -39,12 +39,16 @@
             </div>
 
             <div class="hero-visual">
+                <div class="gradient1"></div>
                 <img src="https://framerusercontent.com/images/8kiRM8oMbaw4x6W0JgwyPj6o2E.webp?scale-down-to=1024"
                     alt="">
+                <div class="gradient2"></div>
             </div>
         </section>
 
-        <section class="page2"></section>
+        <section class="page2">
+            
+        </section>
         <section class="page3"></section>
         <section class="page4"></section>
     </main>
