--- a/Headspace-clone/index.html
+++ b/Headspace-clone/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mental Health App for Meditaion & Sleep - Headspace</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.9.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -43,9 +44,6 @@
         </div>
     </header>
 
-    <!-- spacer to offset fixed navbar height -->
-    <div class="navbar-spacer" aria-hidden="true"></div>
-
     <!-- hero section -->
     <section class="hero">
         <div class="hero-inner">
@@ -70,25 +68,138 @@
                 <div class="hero-card">
                     <h2>Mental health app with expert-led <br> meditations and tools</h2>
                     <button>Try for $0</button>
-                    <img src="https://headspace-contentful.imgix.net/2pcwdm6O0Kt0rq19lLLCDC/624cec6f5e77f9d7e0d5de6f02c437b5/desktop_hero_1_june5_2x__1__copy.png?ixlib=js-3.8.0&auto=format%2Ccompress" alt="">
+                    <img src="https://headspace-contentful.imgix.net/2pcwdm6O0Kt0rq19lLLCDC/624cec6f5e77f9d7e0d5de6f02c437b5/desktop_hero_1_june5_2x__1__copy.png?ixlib=js-3.8.0&auto=format%2Ccompress"
+                        alt="">
                 </div>
                 <div class="hero-card">
                     <h2>Online therapy that <br> accepts insurance</h2>
                     <button>Check your coverage</button>
-                    <img src="https://headspace-contentful.imgix.net/2KFGacky3sZXtt8KLYJgN6/109838d936853779a57a116f0ff2b4ca/desktop_hero_2_june5_2x__1__copy.png?ixlib=js-3.8.0&auto=format%2Ccompress" alt="">
+                    <img src="https://headspace-contentful.imgix.net/2KFGacky3sZXtt8KLYJgN6/109838d936853779a57a116f0ff2b4ca/desktop_hero_2_june5_2x__1__copy.png?ixlib=js-3.8.0&auto=format%2Ccompress"
+                        alt="">
                 </div>
             </div>
         </div>
     </section>
 
     <!-- catagory section -->
-    <section class="catagories-container"></section>
+    <section class="catagories">
+        <h2>What kind of headspace are you looking for?</h2>
+
+        <div class="catagories-grid">
+            <div class="catagory-card">
+                <p>Stress less</p>
+                <div class="catagory-right">
+                    <img src="https://cdn.prod.website-files.com/667d7280286568f4037f6aed/668f8f37b4fcba23cb5dadfe_Icon%20-%20Stress%20Management.png"
+                        alt="">
+                    <i class="ri-arrow-right-s-line"></i>
+                </div>
+            </div>
+
+            <div class="catagory-card">
+                <p>Sleep soundly</p>
+                <div class="catagory-right">
+                    <img src="https://cdn-icons-png.flaticon.com/512/3752/3752811.png" alt="">
+                    <i class="ri-arrow-right-s-line"></i>
+                </div>
+            </div>
+
+            <div class="catagory-card">
+                <p>Manage anxiety</p>
+                <div class="catagory-right">
+                    <img src="/assets/anxiety-img.png" alt="">
+                    <i class="ri-arrow-right-s-line"></i>
+                </div>
+            </div>
+
+            <div class="catagory-card">
+                <p>Process thoughts</p>
+                <div class="catagory-right">
+                    <img src="https://headspace-contentful.imgix.net/2usHIrAM7vqshdaaVyT70a/5332e92acbd433dc2a2148a945948900/More_Info_-_Hero.svg?ixlib=js-3.8.0&w=750"
+                        alt="">
+                    <i class="ri-arrow-right-s-line"></i>
+                </div>
+            </div>
+
+            <div class="catagory-card">
+                <p>Practice meditation</p>
+                <div class="catagory-right">
+                    <img src="/assets/meditation-img.png" alt="">
+                    <i class="ri-arrow-right-s-line"></i>
+                </div>
+            </div>
+
+            <div class="catagory-card">
+                <p>Start therapy</p>
+                <div class="catagory-right">
+                    <img src="/assets/therapy-img.png" alt="">
+                    <i class="ri-arrow-right-s-line"></i>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- featured yellow section -->
-    <section class="featured"></section>
+    <section class="featured">
+        <h1>The mental health app for <br> every moment</h1>
+        <div class="tabs">
+            <button class="tab active">AI guidance</button>
+            <button class="tab">Guided meditations</button>
+            <button class="tab">Sleep resources</button>
+            <button class="tab">Expert-led programs</button>
+            <button class="tab">Online therapy</button>
+        </div>
+
+        <div class="slider">
+            <div class="slides">
+
+                <div class="slide slide-yellow">
+
+                    <div class="slide-left">
+
+                        <div class="chat-card">
+                            <h4 class="user-blue">You</h4>
+                            <p>I get so stressed talking to my mom. <br> It always ends with us arguing.</p>
+                        </div>
+
+                        <div class="chat-card">
+                            <h4 class="user-orange">Ebb</h4>
+                            <p>It’s so tough when family doesn’t see <br>
+                                where you're coming from. Lets try this.</p>
+                        </div>
+
+                        <div class="meditation-card">
+                            <div class="meditation-left">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScpB4HvelHQewXpb7dWfIY1HcZOyyeXdlFhbw8O3UODmC4tHZ3" alt="">
+                                <div>
+                                    <h5>Communicating with Care</h5>
+                                    <p>Meditation (8 min)</p>
+                                </div>
+                            </div>
+
+                            <div class="play-btn">
+                               <i class="ri-play-large-fill"></i>
+                            </div>
+                        </div>
+
+                        <img class="egg-png" src="https://headspace-contentful.imgix.net/2usHIrAM7vqshdaaVyT70a/5332e92acbd433dc2a2148a945948900/More_Info_-_Hero.svg?ixlib=js-3.8.0&w=750"
+                            alt="">
+                    </div>
+
+                    <div class="slide-right">
+                        <h3>Always-there <br> support</h3>
+                        <p>Unpack what’s on your mind with Ebb, our empathetic AI companion, and get <br> personalized
+                            recommendations based on <br> how you’re feeling.</p>
+                        <button>Chat with Ebb</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- testimonials section -->
-    <section class="testimonials"></section>
+    <section class="testimonials">
+        
+    </section>
 
     <!-- corporate section -->
     <section class="corporate"></section>
