--- a/Practice/index.html
+++ b/Practice/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-    <div class="card">
-        <div class="full">
-            <div id="progress">
-                <div id="growth"></div>
-            </div>
-        </div>
-        <div class="status">
-            <img src="https://images.unsplash.com/photo-1771694583915-78f9b39fd6d1?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+    <div id="main">
+        <nav>
+            <h2>Shertians</h2>
             <div>
-                <h4>Atish Adhav</h4>
-                <h5>5 hr ago</h5>
+                <h4>About</h4>
+                <h4>Courses</h4>
+                <h4>Serivces</h4>
+                <h4>Bootcamps</h4>
             </div>
-        </div>
-    </div>
+        </nav>
 
+        <img id="img1" src="https://images.unsplash.com/photo-1724170856041-d453e76fcea5?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+        <img id="img2" src="https://images.unsplash.com/photo-1770988962875-1a9f50e56eb6?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
